--- a/style.css
+++ b/style.css
@@ -6,6 +6,12 @@ body {
     color: white;
 }
 
+header {
+    position: sticky;
+    top: 0;
+    background-color: black;
+}
+
 .insta-header {
     display: flex;
     justify-content: space-between;
