--- a/style.css
+++ b/style.css
@@ -1,54 +1,112 @@
 body {
     margin: 0;
     box-sizing: border-box;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background-color: black;
-    color: white;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
 }
 
 header {
     position: sticky;
     top: 0;
-    background-color: black;
+    background-color: white;
+    border-bottom: 1px solid lightgray;
 }
 
 .insta-header {
     display: flex;
     justify-content: space-between;
-    border-bottom: 1px solid gray;
     align-items: center;
+    padding: 10px;
+    width: 1000px;
+    margin: 0 auto;
 }
 
-.username-flex {
+.header-buttons {
     display: flex;
-    gap: 20px;
-    margin: 30px 10px;
+    gap: 10px;
+    justify-content: space-evenly;
 }
 
-.user-image {
+.header-btn-login {
+    background-color: #4c68d7;
+    color: white;
     border: none;
-    border-radius: 50%;
-    width: 80px;
-    margin: 10px;
-    background-size: cover;
+    border-radius: 8px;
+    padding: 8px 20px;
+    font-size: 14px;
+    font-weight: bold;
+}
+
+.header-btn-signup {
+    background-color: white;
+    color: #4c68d7;
+    border: none;
+    border-radius: 8px;
+    font-size: 14px;
+    font-weight: bold;
+}
+
+.main-body {
+    width: 850px;
+    margin: 10px auto;    
 }
 
 .user-details {
     display: flex;
     align-items: center;
+    gap: 70px;
+    justify-content:start;
+    margin: 10px auto;
 }
 
-.p-username {
-    font-size: large;
+.user-image {
+    border: none;
+    border-radius: 50%;
+    height: 150px;
+    width: 150px;
+    margin: 10px;
+    background-size: cover;
+}
+
+.user-info {
+    display: flex;
+    align-items: start;
+    flex-direction: column;
+}
+
+.user-name {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    justify-content: space-evenly;
+}
+
+.user-verified {
+    display: flex;
+    align-items: center;
+    gap: 5px;
 }
 
 .user-buttons {
     display: flex;
     align-items: center;
-    gap: 10px;
+    gap: 5px;
 }
 
-.btn-follow {
+.p-username {
+    font-size: 23px;
+}
+
+.div-user-buttons {
+    background-color: rgb(243, 243, 243);
+    color: rgb(24, 24, 24);
+    border: none;
+    border-radius: 10px;
+    padding: 8px 15px;
+    font-size: 13px;
+    font-weight: 600;
+}
+
+/* .btn-follow {
     background-color: #4c68d7;
     color: white;
     border: none;
@@ -66,7 +124,94 @@ header {
     padding: 8px 30px;
     font-size: 14px;
     font-weight: 500;
+} */
+
+.user-posts {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    justify-content: space-evenly;
 }
+
+.user-addn-info {
+    margin: 10px 0;
+}
+
+.user-addn-info-p1 {
+    margin-bottom: 5px;
+}
+
+.btn-threads {
+    background-color: rgb(243, 243, 243);
+    color: rgb(69, 69, 69);
+    border: none;
+    border-radius: 20px;
+    padding: 0 10px;
+    font-size: 12px;
+    font-weight: normal;
+    align-items: center;
+    margin-bottom: 5px;
+}
+
+.threads-svg {
+    color: black;
+}
+
+.btn-threads-flex {
+    display: flex;
+    align-items: center;
+    gap: 2px;
+}
+
+.user-addn-info-p2 {
+    margin: 0;
+    color: rgb(148, 144, 144);
+    font-size: 14px;
+}
+
+.user-addn-info-p3 {
+    margin: 0;
+    font-size: 14px;
+}
+
+.user-addn-info-a {
+    text-decoration: none;
+    font-size: 14px;
+    font-weight: bold;
+}
+
+.link-flex {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+
+.link-svg {
+    color: #4c68d7;
+}
+
+.user-info-a {
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 14px;
+    color: #4c68d7;
+}
+
+/* .username-flex {
+    display: flex;
+    gap: 20px;
+    margin: 30px 10px;
+}
+
+
+
+.user-buttons {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+
 
 .btn-add {
     background-color: rgb(48, 47, 47);
@@ -92,11 +237,10 @@ header {
     border: none;
     border-radius: 20px;
     padding: 0 10px;
-    font-size: 13px;
+    font-size: 12px;
     font-weight: bolder;
     align-items: center;
     margin-bottom: 5px;
-    display: inline-flex;
 }
 
 .btn-threads-flex {
@@ -124,6 +268,12 @@ header {
     font-weight: bold;
 }
 
+.link-flex {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+
 .follow-p {
     color: rgb(148, 144, 144);
     font-size: small;
@@ -133,4 +283,116 @@ header {
 
 .follow-b {
     color: white;
+} */
+
+
+.stories {
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    gap: 50px;
+    margin: 20px auto;
+}
+
+.indiv-story {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-items: center;
+}
+
+.story {
+    padding: 2px;
+    border: 1px solid lightgray;
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+}
+
+.story-img {
+    height: 56px;
+    width: 56px;
+    padding: 2px;
+    border-radius: 50%;
+}
+
+.posts-headings {
+    border-top: 1px solid lightgray;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+}
+
+.post-heading {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
+}
+
+footer {
+    position: fixed;
+    bottom: 0;
+    background-color: black;
+    width: 100%;
+    height: 100px;
+    align-items: center;
+}
+
+.footer-div {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    margin-top: 10px;
+}
+
+.footer-div-logo {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.footer-img {
+    width: 50px;
+    border-radius: 50%;
+    border: 3px solid white;
+    background-color: white;
+    margin: auto 0;
+}
+
+.footer-div-login {
+    color: white;
+    font-size: 14px;
+}
+
+.footer-p {
+    margin: 0;
+}
+
+.footer-btns {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin: 10px;
+}
+
+.footer-btn-login {
+    background-color: #4c68d7;
+    color: white;
+    border: none;
+    border-radius: 8px;
+    padding: 8px 30px;
+    font-size: 14px;
+    font-weight: bold;
+}
+
+.footer-btn-signup {
+    background-color: black;
+    color: #4c68d7;
+    border: none;
+    border-radius: 8px;
+    font-size: 14px;
+    font-weight: bold;
 }
