--- a/style.css
+++ b/style.css
@@ -133,12 +133,17 @@ header {
     justify-content: space-evenly;
 }
 
+.user-posts-p {
+    font-weight: 500;
+}
+
 .user-addn-info {
     margin: 10px 0;
 }
 
 .user-addn-info-p1 {
     margin-bottom: 5px;
+    font-weight: 500;
 }
 
 .btn-threads {
@@ -329,6 +334,103 @@ header {
     justify-content: center;
     align-items: center;
     gap: 5px;
+}
+
+.posts {
+    display: flex;
+    gap: 5px;
+    flex-direction: column;
+}
+
+.posts-row {
+    display: flex;
+    gap: 5px;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-bottom: 2px;
+}
+
+.post {
+    width: 33%;
+    height: 300px;
+}
+
+.post-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.related-accounts {
+    margin-top: 10px;
+}
+
+.related-acounts-p-flex {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.related-accounts-p {
+    font-weight: 500;
+    color: gray;
+}
+
+.related-accounts-a {
+    text-decoration: none;
+    font-weight: 500;
+    color: #4c68d7;
+}
+
+.related-accounts-flex {
+    display: flex;
+    gap: 10px;
+    justify-content: start;
+    align-items: center;
+    overflow: hidden;
+}
+
+.related-account {
+    border: 1px solid lightgray;
+    border-radius: 3px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    width: 120px;
+    height: 170px;
+    flex-shrink: 0;
+}
+
+.related-account-img {
+    border: 1px solid lightgray;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    object-fit: cover;
+}
+
+.related-account-user-verified {
+    display: flex;
+    justify-content: center;
+    gap: 5px;
+    align-items: center;
+    margin-top: 8px;
+}
+
+.related-account-p-username {
+    font-weight: 500;
+    margin: 0px;
+    font-size: 14px;
+}
+
+.related-account-p {
+    margin-top: 0px;
+    font-size: 15px;
+    color: gray;
+    margin-left: -12px;
+    margin-right: -12px;
 }
 
 footer {
