--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ header {
     top: 0;
     background-color: white;
     border-bottom: 1px solid lightgray;
+    z-index: 1;
 }
 
 .insta-header {
@@ -353,12 +354,54 @@ header {
 .post {
     width: 33%;
     height: 300px;
+    position: relative;
 }
 
 .post-img {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    position: relative;
+}
+
+.post-tint {
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.133);
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+}
+
+.svg-pin {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+}
+
+.like-comment {
+    display: flex;
+    position: absolute;
+    gap: 25px;
+    justify-content: center;
+    align-items: center;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.like {
+    display: flex;
+    gap: 5px;
+    justify-content: center;
+    align-items: center;
+}
+
+.svg-heart-fill {
+
 }
 
 .related-accounts {
@@ -431,6 +474,34 @@ header {
     color: gray;
     margin-left: -12px;
     margin-right: -12px;
+}
+
+.meta-links {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    margin-top: 70px;
+}
+
+.meta-link { 
+    font-size: 12px;
+    color: gray;
+}
+
+.meta-links-1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    margin-top: 4px;
+}
+
+.meta-link-flex {
+    display: flex;
+    justify-content: center;
+    gap: 5px;
+    align-items: center;
 }
 
 footer {
